--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,11 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  
+  <welcome-file-list>
+    <welcome-file>/client/client_form/return-client-registration_view.jsp</welcome-file>
+   
+  </welcome-file-list>
+  
+   
 </web-app>
